# ALPinist

./: CMakeLists.txt  README.md
cmake/: FindCRPropa.cmake
include/alpinist/: ALPPhotonMixing.h  CandidateProperties.h  Constants.h  InverseComptonScattering.h  PairProduction.h  PlasmaDensity.h  PolarisationCorrections.h  SourceFeatures.h  WaveFunction.h
python/: alpinist.i  findCRPropa.py
src/: ALPPhotonMixing.cc  InverseComptonScattering.cc  PairProduction.cc  PlasmaDensity.cc  PolarisationCorrections.cc  SourceFeatures.cc
tableGenerator/: computeElectromagneticInteractions.py  constantsUnits.py  generateTables.sh  interactionsElectromagnetic.py  meanFreePath.py
